syntax = "proto3";

package dn42graph;

// Contains metadata information about the graph.
message Metadata {
  string vendor = 1;
  int64 timestamp = 2;
  string time = 3;
}

// Represents an IPv6 address split into four 32-bit fields:
message IPv6 {
  uint32 high_h32 = 1;
  uint32 high_l32  = 2;
  uint32 low_h32  = 3;
  uint32 low_l32   = 4;
}

// Represents a CIDR route using a oneof field for IPv4 or IPv6.
message CIDR {
  uint32 length = 1;
  oneof ip {
    uint32 ipv4 = 2;
    IPv6 ipv6 = 3;
  }
}

// Represents a network node with its ASN, description, and advertised routes.
message Node {
  uint32 asn = 1;
  string desc = 2;
  repeated CIDR routes = 3;
}

// Represents a link between two nodes. Here source and target are the indices
// of nodes in the node array.
message Link {
  uint32 source = 1;
  uint32 target = 2;
}

// The top-level message containing graph metadata, nodes, and links.
message Graph {
  Metadata metadata = 1;
  repeated Node nodes = 2;
  repeated Link links = 3;
}
